ZK   update